--- a/Scripts/Editor/MPewsey.ManiaMap.Unity.Editor.asmdef
+++ b/Scripts/Editor/MPewsey.ManiaMap.Unity.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "MPewsey.ManiaMap.Editor",
+    "name": "MPewsey.ManiaMap.Unity.Editor",
     "rootNamespace": "",
     "references": [
         "GUID:8ab10455655f7f641be4a800d5eac73d"
