--- a/Scripts/Editor/MPewsey.ManiaMap.Unity.Editor.asmdef
+++ b/Scripts/Editor/MPewsey.ManiaMap.Unity.Editor.asmdef
@@ -2,7 +2,9 @@
     "name": "MPewsey.ManiaMap.Unity.Editor",
     "rootNamespace": "",
     "references": [
-        "GUID:8ab10455655f7f641be4a800d5eac73d"
+        "GUID:8ab10455655f7f641be4a800d5eac73d",
+        "GUID:9e24947de15b9834991c9d8411ea37cf",
+        "GUID:69448af7b92c7f342b298e06a37122aa"
     ],
     "includePlatforms": [
         "Editor"
