Add RoomPrefabDatabase tests

--- a/Scripts/Tests/PlayMode/MPewsey.ManiaMap.Unity.Tests.PlayMode.asmdef
+++ b/Scripts/Tests/PlayMode/MPewsey.ManiaMap.Unity.Tests.PlayMode.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "MPewsey.ManiaMap.Unity"
+        "MPewsey.ManiaMap.Unity",
+        "Unity.Addressables",
+        "Unity.ResourceManager"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
