--- a/Scripts/Tests/PlayMode/MPewsey.ManiaMap.Unity.Tests.PlayMode.asmdef
+++ b/Scripts/Tests/PlayMode/MPewsey.ManiaMap.Unity.Tests.PlayMode.asmdef
@@ -14,7 +14,8 @@
     "overrideReferences": true,
     "precompiledReferences": [
         "nunit.framework.dll",
-        "MPewsey.ManiaMap.dll"
+        "MPewsey.ManiaMap.dll",
+        "MPewsey.Common.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [
