Add additional tests

--- a/Assets/Scripts/Tests/EditMode/MPewsey.ManiaMap.Unity.Tests.EditMode.asmdef
+++ b/Assets/Scripts/Tests/EditMode/MPewsey.ManiaMap.Unity.Tests.EditMode.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "MPewsey.ManiaMapUnity"
+        "MPewsey.ManiaMapUnity",
+        "MPewsey.ManiaMapUnity.Editor"
     ],
     "includePlatforms": [
         "Editor"
